# OpenGLTutorialCode

./: .gitignore
3dTriangle/: CMakeLists.txt
3dTriangle/data/: Basic.frag
3dTriangle/src/: Data.cpp  ErrorHandling.h  ShaderLoader.h
Basic Rendering Theory/: tutorial.md
CMakeModules/: FindSDL2.cmake
Hello_Triangle/: CMakeLists.txt
Hello_Triangle/data/: Basic.vert
Hello_Triangle/src/: Data.h  ErrorHandling.cpp  ErrorHandling.h  ShaderLoader.cpp  main.cpp
Introduction/: tutorial.md
SDL_Window/: CMakeLists.txt
SDL_Window/ext/: empty.txt
SDL_Window/src/: main.cpp
